--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,22 @@
   "description": "Group similar tabs instantly with a custom key + click flow.",
   "permissions": ["tabs", "tabGroups", "storage"],
   "host_permissions": ["<all_urls>"],
+  "icons": {
+    "16": "assets/icons/icon16.png",
+    "32": "assets/icons/icon32.png",
+    "48": "assets/icons/icon48.png",
+    "128": "assets/icons/icon128.png"
+  },
   "background": {
     "service_worker": "src/background.js"
   },
   "action": {
     "default_title": "tapog.ai",
-    "default_popup": "src/popup.html"
+    "default_popup": "src/popup.html",
+    "default_icon": {
+      "16": "assets/icons/icon16.png",
+      "32": "assets/icons/icon32.png"
+    }
   },
   "options_page": "src/options.html",
   "content_scripts": [
